<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.digitalcampus.oppia.fragments.register.RegisterCHFragment">

    <FrameLayout
        android:id="@+id/frame_stepper_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/subtitle_bar"
        android:paddingLeft="@dimen/padding_large"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/padding_large"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <com.badoualy.stepperindicator.StepperIndicator
            android:id="@+id/stepper_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            app:stpi_circleColor="@color/theme_secondary_light"
            app:stpi_circleRadius="8dp"
            app:stpi_indicatorColor="@color/theme_secondary"
            app:stpi_stepCount="3" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view_register_ch_page_controls"
        android:layout_below="@+id/frame_stepper_indicator"
        android:layout_marginTop="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tv_explanation_reg_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Explanation Register CH screen 1"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/view_reg_ch_screen_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                    android:id="@+id/edit_reg_ch_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:required="true">

                    <EditText
                        style="@style/EditValidableForm"
                        android:hint="@string/first_name"
                        android:inputType="textCapWords" />

                </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

                <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                    android:id="@+id/edit_reg_ch_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:required="true">

                    <EditText
                        style="@style/EditValidableForm"
                        android:hint="@string/last_name"
                        android:inputType="textCapWords" />

                </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

                <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                    android:id="@+id/edit_reg_ch_employee_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cantContainSpaces="true"
                    app:required="true">

                    <EditText
                        style="@style/EditValidableForm"
                        android:hint="@string/employee_id"
                        android:inputType="text" />

                </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Oppia.CustomField.TextInputLayoutLabel"
                    android:layout_marginTop="10dp"
                    android:text="@string/gender"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-15dp"
                    style="@style/Widget.AppCompat.Spinner.Underlined" />


                <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                    android:id="@+id/edit_reg_year_started"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cantContainSpaces="true"
                    app:helperText="@string/year_started_helper_text"
                    app:helperTextEnabled="true"
                    app:required="true">

                    <EditText
                        style="@style/EditValidableForm"
                        android:hint="@string/year_started"
                        android:inputType="numberDecimal" android:maxLength="4" />

                </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_reg_ch_screen_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                    android:id="@+id/edit_reg_ch_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:required="true">

                    <EditText
                        style="@style/EditValidableForm"
                        android:hint="@string/register_form_password_title"
                        android:inputType="textPassword" />

                </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

                <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                    android:id="@+id/edit_reg_ch_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:required="true">

                    <EditText
                        style="@style/EditValidableForm"
                        android:hint="@string/register_form_password_again_title"
                        android:inputType="textPassword" />

                </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_reg_ch_screen_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_counties"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_districts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/view_register_ch_page_controls"
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/quiz_navigation_bar"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register_ch_previous"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_arrow_left_small"
            android:drawablePadding="10dp"
            android:drawableTint="@color/quiz_navigation_button"
            android:text="@string/previous" />

        <View style="@style/ExpansorHoriz" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register_ch_next"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:drawableRight="@drawable/ic_arrow_right_small"
            android:drawablePadding="5dp"
            android:drawableTint="@color/quiz_navigation_button"
            android:text="@string/next" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register_perform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:text="@string/register_btn_text"
            android:theme="@style/PrimaryButton"
            android:visibility="gone" />

    </LinearLayout>


</RelativeLayout>
