<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="username_field_helper_text">Use your family name and your ID number as username. For example, MenyonJTP5-04</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="employee_id">Employee ID</string>
    <string name="select_county">Select county …</string>
    <string name="select_district">Select district …</string>
    <string name="please_select_county_district">Please select county and district</string>
    <string name="back">Back</string>

    <string name="register_select_role_explanation">Please select your role</string>
</resources>