...
    android:orientation="vertical">


    <View style="@style/ExpansorVert" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reg_cha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="CHA"
        app:backgroundTint="@color/bg_button_selectable" />

...
